--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
      
     <title>Assamese Keyboard</title>
-    <link rel="stylesheet" type="text/css" href="CSS/style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
  <center><h1> JORHAT ENGINEERING COLLEGE</h1> <br>
@@ -100,6 +100,6 @@
 </div>
  </center>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-<script type="text/javascript" src="JS/keyboard.js"></script>
+<script type="text/javascript" src="keyboard.js"></script>
 </body>
 </html>
